# SWPilot_2026_Robotics_Team2

csh5904/Chapter2/: 1_hello.py
csh5904/Chapter2/eight/: 8_publisher.html  8_publisher.md
csh5904/Chapter2/eleven/: 11_service.html  11_service.md
csh5904/Chapter2/five/: 5_logging.md  5_ros2_python.html  5_ros2_python_node.md
csh5904/Chapter2/four/: 4_ros2_package.html  4_ros2_package.md
csh5904/Chapter2/nine/: 9_subscriber.html  9_subscriber.md
csh5904/Chapter2/one/: 1_linux.html  1_linux.md
csh5904/Chapter2/seven/: 7_topic.html  7_topic.md
csh5904/Chapter2/six/: 6_callback.html  6_callback.md
csh5904/Chapter2/ten/: 10_turtle_move_control.html  10_turtle_move_controll.html  sdfsdf  turtle_move_control.py
csh5904/Chapter2/thirty/: turtle_follow.py
csh5904/Chapter2/three/: 3_node.html  3_node.md
csh5904/Chapter2/thrty/: 13_tutlr_follow.html  turtle_follow.py
csh5904/Chapter2/twleve/: 12_launch.html  12_launch.md  turtle.launch.py
csh5904/Chapter2/two/: 2_ros.html  2_ros.md
csh5904/Chapter3/: 1_rviz.md
csh5904/Chapter3/3-1/: 1_rviz.html  1_rviz.md
csh5904/Chapter3/3-10/: 10_into_the_real.html  tracked_robot.urdf
csh5904/Chapter3/3-10/sw_ws/src/tracked_robot/: package.xml
csh5904/Chapter3/3-10/sw_ws/src/tracked_robot/launch/: gazebo.launch.py
csh5904/Chapter3/3-2/: 2_urdf_xacro.html  2_urdf_xacro.md  my_first_robot.urdf  my_first_robot.urdf.xacro
csh5904/Chapter3/3-3/: 3_publish_model.html  3_publisher_robt.md  joint_state_publisher.py  rviz_config.rviz
csh5904/Chapter3/3-4/: 4_gazebo.html  4_gazebo.md
(+63 files in other folders)
