<?xml version="1.0"?>
<package format="3">
  <name>tracked_robot</name>
  <version>1.0.0</version>
  <description>실측값 기반 트랙형 이동 로봇 URDF + Gazebo 시뮬레이션</description>
  <maintainer email="user@example.com">user</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>gazebo_ros_pkgs</exec_depend>
  <exec_depend>rviz2</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
